clean-up login
